--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "deploy-test",
+  "homepage": "https://4ccio.github.io/deploy-test/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
